--- a/index.html
+++ b/index.html
@@ -820,6 +820,19 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-vix/btpns/btpns-slide-1.png" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>VIX - BTPN Syariah</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-vix-btpns.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/datacamp/Real-time Insights from Social Media Data.png" class="img-fluid"
