--- a/index.html
+++ b/index.html
@@ -794,45 +794,6 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-vix/vix-hci.png" class="img-fluid" alt="">
-              <div class=" portfolio-info">
-                <h4>VIX - Home Credit Indonesia</h4>
-                <div class="portfolio-links">
-                  <a href="pages/project-vix-hci.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-vix/vix-bmi.png" class="img-fluid" alt="">
-              <div class=" portfolio-info">
-                <h4>VIX - Bank Muamalat</h4>
-                <div class="portfolio-links">
-                  <a href="pages/project-vix-muamalat.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/project-vix/btpns/btpns-slide-1.png" class="img-fluid" alt="">
-              <div class=" portfolio-info">
-                <h4>VIX - BTPN Syariah</h4>
-                <div class="portfolio-links">
-                  <a href="pages/project-vix-btpns.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-3 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/datacamp/Real-time Insights from Social Media Data.png" class="img-fluid"
@@ -1040,6 +1001,45 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-vix/vix-hci.png" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>VIX - Home Credit Indonesia</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-vix-hci.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-vix/vix-bmi.png" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>VIX - Bank Muamalat</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-vix-muamalat.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-vix/btpns/btpns-slide-1.png" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>VIX - BTPN Syariah</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-vix-btpns.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 portfolio-item filter-cloud">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/aws-staticw/slide-1.png" class="img-fluid" alt="">
@@ -1197,6 +1197,19 @@
                 </div>
               </div>
             </div> -->
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-vix/vix-kimfar.png" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>VIX - Kimia Farma</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-vix-kimia-farma.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-data filter-python filter-ml">
             <div class="portfolio-wrap">
