--- a/pages/project-bookshelf-api.html
+++ b/pages/project-bookshelf-api.html
@@ -82,23 +82,27 @@
                             <ul class="list-group">
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Project name</strong></div>
-                                    <div class="col-9">: Book Shelf API</div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">Book Shelf API</div>
                                 </li>
                                 <!-- Category -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Category</strong></div>
-                                    <div class="col-9">: Backend</div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">Backend</div>
                                 </li>
                                 <!-- Role -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Role</strong></div>
-                                    <div class="col-9">: Backend Developer</div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
+                                    <div class="col-9">Backend Developer</div>
                                 </li>
                                 <!-- Company -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Company</strong></div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        <a href="https://www.dicoding.com/" target="_blank">: Dicoding</a>,
+                                        <a href="https://www.dicoding.com/" target="_blank">Dicoding</a>,
                                         <a href="https://www.dicoding.com/users/maulanakavaldo/academies"
                                             target="_blank">My Profile</a>
 
@@ -109,33 +113,29 @@
                                     <div class="col-3">
                                         <strong>Project date</strong>
                                     </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        : 2023
+                                        October 2023
                                     </div><!-- Project tools -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Tools</strong>
                                     </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        : VSCode
+                                        VSCode
                                     </div>
                                 </li><!-- Project URL -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
                                         <strong>Project URL</strong>
                                     </div>
+                                    <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
                                         <a href="https://github.com/maulanakavaldo/dicoding_project/tree/main/Belajar%20Membuat%20Aplikasi%20Back-End%20untuk%20Pemula"
-                                            target="_blank">: GitHub</a>
+                                            target="_blank">GitHub</a>
                                     </div>
                                 </li>
-                                <!-- Uncomment and use as needed for other section -->
-                                <!-- <li class="list-group-item d-flex">
-                                    <div class="col-3"><strong>Demo</strong></div>
-                                    <div class="col-9">
-                                        <a href="#" target="_blank">: </a>
-                                    </div>
-                                </li> -->
                             </ul>
                         </div>
                     </div>
