--- a/pages/project-vix-kimia-farma.html
+++ b/pages/project-vix-kimia-farma.html
@@ -82,7 +82,7 @@
                                 <li class="list-group-item d-flex">
                                     <div class="col-3"><strong>Project name</strong></div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
-                                    <div class="col-9">Sales at Kimia Farma</div>
+                                    <div class="col-9">Sales at PT. Kimia Farma</div>
                                 </li>
                                 <!-- Category -->
                                 <li class="list-group-item d-flex">
