--- a/pages/project-web-hc-system.html
+++ b/pages/project-web-hc-system.html
@@ -130,6 +130,14 @@
                   <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">System Analyst</div>
                 </li>
+                <!-- Role -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Company</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">
+                    <a href="https://berijalan.co.id/" target="_blank">Berijalan Member of ASTRA</a>
+                  </div>
+                </li>
                 <!-- Project date -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Project date</strong></div>
@@ -159,7 +167,7 @@
                   <div class="col-3"><strong>Demo</strong></div>
                   <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="https://technoapp-dev.berijalan.id/hcsystem-web/administration/user-management" target="_blank">HC System (dev) </a>
+                    <a href="https://technoapp-dev.berijalan.id/hcsystem-web/administration/user-management" target="_blank">HC System (dev)</a>, 
                     <a href="https://technoapp.berijalan.id/login" target="_blank">HC System (prod)</a>
                   </div>
                 </li>
