--- a/pages/project-web-server.html
+++ b/pages/project-web-server.html
@@ -113,7 +113,7 @@
                                     </div>
                                     <div class=""><strong>:</strong>&nbsp;</div>
                                     <div class="col-9">
-                                        2023
+                                        October2023
                                     </div><!-- Project tools -->
                                 <li class="list-group-item d-flex">
                                     <div class="col-3">
