--- a/pages/project-bike-sharing.html
+++ b/pages/project-bike-sharing.html
@@ -79,23 +79,27 @@
               <ul class="list-group">
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Project name</strong></div>
-                  <div class="col-9">: Bike Sharing</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Bike Sharing</div>
                 </li>
                 <!-- Category -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Category</strong></div>
-                  <div class="col-9">: Data Science, Python</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Data Science, Python</div>
                 </li>
                 <!-- Role -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Role</strong></div>
-                  <div class="col-9">: Data Scientist</div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">Data Scientist</div>
                 </li>
                 <!-- Company -->
                 <li class="list-group-item d-flex">
                     <div class="col-3"><strong>Company</strong></div>
+                    <div class=""><strong>:</strong>&nbsp;</div>
                     <div class="col-9">
-                        <a href="https://www.dicoding.com/" target="_blank">: Dicoding</a>,
+                        <a href="https://www.dicoding.com/" target="_blank">Dicoding</a>,
                         <a href="https://www.dicoding.com/users/maulanakavaldo/academies"
                             target="_blank">My Profile</a>
 
@@ -106,30 +110,33 @@
                   <div class="col-3">
                     <strong>Project date</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : September 2023
+                    September 2023
                   </div><!-- Project tools -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Tools</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    : Jupyter Notebook
+                    Jupyter Notebook
                   </div>
                 </li><!-- Project URL -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
                     <strong>Project URL</strong>
                   </div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="https://github.com/maulanakavaldo/bike_sharing" target="_blank">: GitHub</a>
+                    <a href="https://github.com/maulanakavaldo/bike_sharing" target="_blank">GitHub</a>
                   </div>
                 </li>
                 <!-- Uncomment and use as needed for other section -->
                 <!-- <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Demo</strong></div>
                   <div class="col-9">
-                    <a href="#" target="_blank">: </a>
+                    <a href="#" target="_blank"></a>
                   </div>
                 </li> -->
               </ul>
