--- a/pages/project-bike-sharing.html
+++ b/pages/project-bike-sharing.html
@@ -120,7 +120,7 @@
                   </div>
                   <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    Jupyter Notebook
+                    Jupyter Notebook, Streamlit
                   </div>
                 </li><!-- Project URL -->
                 <li class="list-group-item d-flex">
@@ -133,12 +133,13 @@
                   </div>
                 </li>
                 <!-- Uncomment and use as needed for other section -->
-                <!-- <li class="list-group-item d-flex">
+                <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Demo</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="#" target="_blank"></a>
+                    <a href="https://drive.google.com/file/d/1XVFT-Wr6a4wCocJmo7A1GLZglPgwIvaW/view?usp=sharing" target="_blank">Dashboard Streamlit</a>
                   </div>
-                </li> -->
+                </li>
               </ul>
             </div>
           </div>
