--- a/pages/project-react-simple-app.html
+++ b/pages/project-react-simple-app.html
@@ -90,6 +90,14 @@
                   <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">React Developer</div>
                 </li>
+                <!-- Company -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Company</strong></div>
+                  <div class=""><strong>:</strong>&nbsp;</div>
+                  <div class="col-9">
+                    <a href="https://berijalan.co.id/" target="_blank">Berijalan Member of ASTRA</a>
+                  </div>
+                </li>
                 <!-- Project date -->
                 <li class="list-group-item d-flex">
                   <div class="col-3">
