--- a/pages/project-web-hc-system.html
+++ b/pages/project-web-hc-system.html
@@ -130,7 +130,7 @@
                   <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">System Analyst</div>
                 </li>
-                <!-- Role -->
+                <!-- Company -->
                 <li class="list-group-item d-flex">
                   <div class="col-3"><strong>Company</strong></div>
                   <div class=""><strong>:</strong>&nbsp;</div>
