--- a/index.html
+++ b/index.html
@@ -1203,9 +1203,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/android-book/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Book</h4>
+                <h4>Book App</h4>
                 <div class="portfolio-links">
-                  <a href="pages/android-book.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="pages/android-book-app.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -1216,9 +1216,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/android-room-persistance/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Room Persistance</h4>
+                <h4>Student App</h4>
                 <div class="portfolio-links">
-                  <a href="pages/android-room.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="pages/android-student-app.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
