--- a/index.html
+++ b/index.html
@@ -1029,6 +1029,19 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data filter-excel">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/vba-excel-automation-and-visualization/automation-and-visualization-integrating-excel-vba-forms-with-looker-studio.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Integrating Excel VBA Forms with Looker Studio</h4>
+                <div class="portfolio-links">
+                  <a href="pages/project-automation-and-visualization.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-vix/btpns/btpns-slide-1.png" class="img-fluid" alt="">
