--- a/index.html
+++ b/index.html
@@ -870,6 +870,71 @@
             </div>
           </div>
 
+          <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/main.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Sentiment Analysis Shopee App</h4>
+                <div class="portfolio-links">
+                  <a href="" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/main.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Movie Recommendation System</h4>
+                <div class="portfolio-links">
+                  <a href="" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/main.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Car Price Prediction</h4>
+                <div class="portfolio-links">
+                  <a href="" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/main.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Water Potability (MLOPS)</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/mlops-water-pipeline/" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/main.webp" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Breast Cancer (MLOPS)</h4>
+                <div class="portfolio-links">
+                  <a href="" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div> -->
+
           <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/datacamp/Dr. Semmelweis and the Discovery of Handwashing.webp"
@@ -1031,7 +1096,8 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data filter-excel">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/vba-excel-automation-and-visualization/automation-and-visualization.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/vba-excel-automation-and-visualization/automation-and-visualization.webp"
+                class="img-fluid" alt="">
               <div class=" portfolio-info">
                 <h4>Integrating Excel VBA Forms with Looker Studio</h4>
                 <div class="portfolio-links">
@@ -1286,7 +1352,7 @@
         </div>
 
         <div class="row galery-container" data-aos="fade-up" data-aos-delay="200">
-          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
+          <!-- <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/coursera/ibm-da/IBM Data Analyst.png"
                 class="img-fluid img-responsive thumb" alt="">
@@ -1396,7 +1462,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div id="sa" class="col-lg-3 col-md-6 galery-item filter-sa filter-intern">
             <div class="portfolio-wrap">
@@ -1529,11 +1595,17 @@
           <div id="dicoding" class="col-lg-3 col-md-6 galery-item filter-data filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/dicoding/dicoding.png" class="img-fluid img-responsive thumb" alt="">
-              <div class="portfolio-info">
+              <!-- <div class="portfolio-info">
                 <h4>Dicoding</h4>
                 <div class="portfolio-links">
                   <a href="pages/gallery-dicoding.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div> -->
+              <div class="portfolio-info">
+                <div class="portfolio-links">
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJlonSS5YAc6lEy2g?e=3giKgD" target="_blank"
+                    title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -1570,8 +1642,12 @@
               <img src="assets/img/certif_licen/dqlab.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Python, SQL, R, Excel</h4>
-                <div class="portfolio-links">
+                <!-- <div class="portfolio-links">
                   <a href="pages/gallery-dqlab.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Show Details"><i class="bx bx-link"></i></a>
+                </div> -->
+                <div class="portfolio-links">
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJmczdm4Rj_gha-rw?e=qxwGKQ" target="_blank"
                     title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -1622,9 +1698,13 @@
               <img src="assets/img/certif_licen/hackerrank/hackerrank.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <!-- <h4>Hackerrank Certifications</h4> -->
-                <div class="portfolio-links">
+                <!-- <div class="portfolio-links">
                   <a href="pages/gallery-hackerrank.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div> -->
+                <div class="portfolio-links">
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJokyoRAmT9Sr9j5Q?e=4TVdiI" target="_blank"
+                    title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -1636,7 +1716,7 @@
               <div class="portfolio-info">
                 <h4>Trial Course</h4>
                 <div class="portfolio-links">
-                  <a href="pages/gallery-pacmann.html" class="portfolio-details-lightbox"
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJpkWU20rHJaO4IlQ?e=ZZCRNG" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
