--- a/index.html
+++ b/index.html
@@ -634,6 +634,25 @@
             <h3 class="resume-title">Experience</h3>
 
             <div class="resume-item">
+              <h4>Academy Code Review at Dicoding Indonesia</h4>
+              <h5>June 2024 - Present</h5>
+              <p>Learning Path: 
+                <a href="https://www.dicoding.com/users/mkavaldo/academies"
+                target="_blank">Data Scientist</a> 
+                and 
+                <a href="https://www.dicoding.com/learningpaths/600"
+                target="_blank">Machine Learning Engineer</a>. Visit <a href="https://www.dicoding.com/users/mkavaldo/academies"
+                target="_blank"> my profile</a></p>
+              <p>As an External Code Reviewer, my responsibility:</p>
+              <ul>
+                <li>Evaluate code deliverables to ensure compliance with standards and requirements.</li>
+                <li>Provide constructive feedback and improvement suggestions to help students improve code quality.
+                </li>
+                <li>Provide an objective assessment based on a predetermined rubric.</li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
               <a href="#" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <h4>System Analyst<span>&nbsp;</span><span class="bx bx-link"></span></h4>
               </a>
@@ -1716,8 +1735,9 @@
               <div class="portfolio-info">
                 <h4>Trial Course</h4>
                 <div class="portfolio-links">
-                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJpkWU20rHJaO4IlQ?e=ZZCRNG" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJpkWU20rHJaO4IlQ?e=ZZCRNG"
+                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                      class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
