--- a/index.html
+++ b/index.html
@@ -1733,10 +1733,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/pacmann/pacmann.png" class="img-fluid img-responsive thumb" alt="">
               <div class="portfolio-info">
-                <h4>Trial Course</h4>
+                <!-- <h4></h4> -->
                 <div class="portfolio-links">
-                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJpkWU20rHJaO4IlQ?e=ZZCRNG"
-                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgZJpkWU20rHJaO4IlQ?e=ZZCRNG" target="_blank"
+                    " title="Show Details"><i
                       class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -1745,11 +1745,11 @@
 
           <div class="col-lg-3 col-md-6 galery-item filter-data filter-py filter-sql">
             <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/vix-kalbe.png" class="img-fluid" alt="">
+              <img src="assets/img/certif_licen/rakamin/rakamin-pbi.svg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/vix-kalbe.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgaQhFef1oG_ncGK3SQ?e=DDlIM1" target="_blank" title="Show Details"><i
+                    class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
