--- a/index.html
+++ b/index.html
@@ -1567,8 +1567,7 @@
               <div class="portfolio-info">
                 <!-- <h4></h4> -->
                 <div class="portfolio-links">
-                  <a href="pages/gallery-dts.html" class="portfolio-details-lightbox" data-glightbox="type: external"
-                    title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgaQkyP5fZJ0khZbdXg?e=niqo70" target="_blank" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -1580,8 +1579,7 @@
               <div class="portfolio-info">
                 <h4>AWS Certification</h4>
                 <div class="portfolio-links">
-                  <a href="pages/gallery-aws-certification.html" class="portfolio-details-lightbox"
-                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgaQjiXaNh3wBR-DKKA?e=luCxjk" target="_blank" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -1750,56 +1748,6 @@
                 <div class="portfolio-links">
                   <a href="https://1drv.ms/f/s!Ap5pZOR1BxUXgaQhFef1oG_ncGK3SQ?e=DDlIM1" target="_blank" title="Show Details"><i
                     class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 galery-item filter-data filter-py filter-sql">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/vix-muamalat.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/vix-muamalat.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 galery-item filter-data filter-py filter-sql">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/vix-btpn.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/vix-btpn.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 galery-item filter-data filter-py filter-sql filter-bd">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/vix-kimfar.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-links">
-                  <a href="assets/img/certif_licen/vix-kimfar.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 galery-item filter-data filter-r">
-            <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/rakamin-1.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <!-- <h4>Rakamin</h4> -->
-                <div class="portfolio-links"><a href="assets/img/certif_licen/rakamin-1.png"
-                    data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                  <a href="assets/img/certif_licen/rakamin-2.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"></a>
                 </div>
               </div>
             </div>
